--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ justify-content: center;
             width: 300px;
             height: 300px;
             border-radius: 50%;
-       margin-bottom: 100px;
+       
 
         }
 button {
@@ -47,7 +47,6 @@ button {
     font-size: large;
 
 }
-
 </style>
 </head>
 <body>
@@ -71,11 +70,11 @@ btnn.addEventListener("click",function(){
 if(val == 0){
     bulb.style.backgroundColor = "aqua"
     btnn.innerHTML = "OFF"
-    bulb.style.boxShadow = "0px 0px 100px #faa300"
-    btnn.style.background = "radial-gradient(#f63e02 30%,#faa300)"
-    bulb.style.background = "radial-gradient(#f63e02,#faa300)"
+    bulb.style.boxShadow = "0px 0px 100px #1900ff"
+    btnn.style.background = "radial-gradient(#98f5e1,#1900ff)"
+    bulb.style.background = "radial-gradient(#98f5e1,#1900ff)"
     btnn.style.color = "black"
-    btnn.style.boxShadow = "0px 0px 100px #faa300"
+    btnn.style.boxShadow = "0px 0px 100px #1900ff"
 
 val = 1;
 console.log(val)
