--- a/index.html
+++ b/index.html
@@ -47,15 +47,25 @@ button {
     font-size: large;
 
 }
+
+#h {
+    color: #1900ff;
+  
+    font-weight: bold;
+    font-size: x-large;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+
+}
 </style>
 </head>
 <body>
-
 
     <div></div>
 
     <button>ON</button>
 
+<h1 id="h"></h1>
   
   
   
@@ -63,9 +73,10 @@ button {
 
 var bulb = document.querySelector("div")
 btnn = document.querySelector("button")
-
+h1 = document.querySelector("#h")
 
 val = 0;
+cot = 1;
 btnn.addEventListener("click",function(){
 if(val == 0){
     bulb.style.backgroundColor = "aqua"
@@ -75,7 +86,7 @@ if(val == 0){
     bulb.style.background = "radial-gradient(#98f5e1,#1900ff)"
     btnn.style.color = "black"
     btnn.style.boxShadow = "0px 0px 100px #1900ff"
-
+cot++;
 val = 1;
 console.log(val)
 }
@@ -88,7 +99,18 @@ else if(val == 1){
     btnn.style.boxShadow = "0px 0px 100px #000"
     btnn.innerHTML = "ON"
     val = 0;
+cot++;
+
 console.log(val)
+
+}
+console.log(h1)
+
+if(cot == 20){
+h1.innerHTML = "ITNA VELA HAI KYA LAVDE";
+h1.style.textShadow = "5px 5px 6px #1900ff"
+h1.style.background = "transparent"
+
 
 }
 }
